--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -22,7 +22,7 @@ jobs:
   init_example_a_engagement:
     name: Initialize Example A engagement
     runs-on: ubuntu-latest
-    #  if: ${{ github.event.inputs.init_example_a_engagement }}
+    if: ${{ github.event.inputs.init_example_a_engagement == 'yes' }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -32,7 +32,7 @@ jobs:
       - name: Create project board
         id: project
         run: |
-          project_id="$(gh api repos/{owner}/{repo}/projects --field name="Example A Engagement" --jq '.id')"
+          project_id="$(gh api repos/{owner}/{repo}/projects --field name='Example A Engagement' --jq '.id')"
 
           echo "::set-output name=project_id::$project_id"
 
