--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           project_id="$(gh api repos/{owner}/{repo}/projects --field name='Example A Engagement' --jq '.id')"
 
+          echo "Created project $project_id"
           echo "::set-output name=project_id::$project_id"
 
       - name: Create project column(s)
