--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -12,10 +12,15 @@ inputs:
 
   - name: init_example_a_engagement
     description: Whether to initialize example A engagement.
-    default: "no"
     validvalues:
       - "yes"
       - "no"
+
+  - name: debug
+    description: Whether to display debug information.
+    validvalues:
+      - "no"
+      - "yes"
 
 init:
   uses: init.yml
