Fixing init workflow
- multi-line arrays don't use commas, causing project column creation to break

--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -47,9 +47,9 @@ jobs:
           PROJECT: ${{ steps.project.outputs.project_id }}
         run: |
           columns=(
-            'Backlog',
-            'To Do',
-            'In Progress',
+            'Backlog'
+            'To Do'
+            'In Progress'
             'Done'
           )
 
