Refactor workflow into reusable action
- built local JavaScript action for populating / provisioning projects
- updated workflow to use new custom action

--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -10,8 +10,8 @@ inputs:
     description: Name of customer this repository is for.
     required: true
 
-  - name: init_example_a_engagement
-    description: Whether to initialize example A engagement.
+  - name: init_engagements
+    description: Whether to initialize engagements.
     validvalues:
       - "yes"
       - "no"
