--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,9 +1,10 @@
 version: 0.1.0
 
-name: Customer Repository Stack
-description: This is a stack to demonstrate how Stacks could be used for initializing repositories framing customer engagements.
+name: Bespoke
+description: Tailor newly created repositories for various use cases.
 branding:
-  color: black
+  color: red
+  icon: menu
 
 inputs:
   - name: customer_name
@@ -17,7 +18,7 @@ inputs:
       - "no"
 
   - name: debug
-    description: Whether to display debug information.
+    description: Whether to display debug information during init.
     validvalues:
       - "no"
       - "yes"
